added dockerfiles and docker compose files

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,7 +1,8 @@
 FROM node:14
-WORKDIR /backend/
-COPY package*.json /backend/
+WORKDIR /backend
+COPY --chown=node:node package*.json ./
 RUN npm install
-COPY . .
+COPY --chown=node:node . ./
+USER node
 EXPOSE 5500
-CMD [ "npm", "run", "start" ]
+CMD [ "npm", "run", "dev" ]
