--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Clubhouse",
-  "name": "Clubhouse",
+  "short_name": "Codershouse",
+  "name": "Codershouse",
   "icons": [
     {
       "src": "favicon.ico",
