--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Codershouse",
-  "name": "Codershouse",
+  "short_name": "clubhouse",
+  "name": "clubhouse",
   "icons": [
     {
       "src": "favicon.ico",
