--- a/deploy.yml
+++ b/deploy.yml
@@ -1,14 +1,16 @@
 ---
-- name: Deploying Project.
+- name: Deploying the application
   hosts: all
   tasks:
-    - name: Pull Frontend image
-      docker_image:
-        name: vinayakkgarg/clubhouse_frontend
-        source: pull
-    - name: Pull Backend image
-      docker_image:
-        name: vinayakkgarg/clubhouse_backend
-        source: pull
-      vars:
-        ansible_python_interpreter: /bin/python3
+    - name: Starting the docker service
+      service:
+        name: docker
+        state: started
+
+    - name: Copying the docker compose file
+      copy:
+        src: ./docker-compose.yml
+        dest: ./
+
+    - name: Starting the application
+      shell: docker-compose up -d
