--- a/backend/package.json
+++ b/backend/package.json
@@ -16,7 +16,8 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.2",
     "socket.io": "^4.4.0",
-    "twilio": "^3.66.0"
+    "twilio": "^3.66.0",
+    "winston": "^3.7.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.12"
